Corrected code, lombok didnt work